# astrobiome_ai

./: .gitignore  projeto: Astrobiome.txt
api/: main.py
astrobiome_ai/: .env.example  .gitignore  README.md  command_order.md  pyproject.toml
astrobiome_ai/src/astrobiome_ai/: crew.py  main.py
astrobiome_ai/src/astrobiome_ai/config/: agents.yaml  tasks.yaml
astrobiome_ai/src/astrobiome_ai/tools/: rag_tool.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  index.css
simulator/: cv_analyzer.py  esp32_simulator.py
