[project]
name = "astrobiome_ai"
version = "0.1.0"
description = "astrobiome_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
astrobiome_ai = "astrobiome_ai.main:run"
run_crew = "astrobiome_ai.main:run"
train = "astrobiome_ai.main:train"
replay = "astrobiome_ai.main:replay"
test = "astrobiome_ai.main:test"
run_with_trigger = "astrobiome_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
