[project]
name = "astrobiome_ai"
version = "0.1.0"
description = "astrobiome_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.13.0",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.48.0",
]

[project.scripts]
astrobiome_ai = "astrobiome_ai.main:run"
run_crew = "astrobiome_ai.main:run"
train = "astrobiome_ai.main:train"
replay = "astrobiome_ai.main:replay"
test = "astrobiome_ai.main:test"
run_with_trigger = "astrobiome_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
